Correct dark mode text color on home page

--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -1,5 +1,9 @@
 @import "../../variables.modules";
 
+h1,h2 {
+  color: black;
+}
+
 h1 {
   font-size: 2rem;
   text-align: center;
